corrected style for paragraph overflow on project card

--- a/style.css
+++ b/style.css
@@ -367,6 +367,7 @@ input:checked + .slider:before {
     transition: transform 0.3s, box-shadow 0.3s;
     border-left: 5px solid;
     text-decoration: none;
+    overflow-wrap: break-word;
 }
 .project-card > a {
     color: inherit;
